dtext: fix tag colors bleeding through [spoiler] tags.
https://danbooru.donmai.us/forum_topics/9127?page=283#forum_post_160443

--- a/app/javascript/src/styles/common/dtext.scss
+++ b/app/javascript/src/styles/common/dtext.scss
@@ -112,6 +112,15 @@ div.prose {
   a.dtext-wiki-does-not-exist, a.dtext-tag-does-not-exist {
     text-decoration: dotted underline;
   }
+
+  .spoiler, .spoiler * {
+    color: var(--dtext-spoiler-color);
+    background: var(--dtext-spoiler-background-color);
+  }
+
+  .spoiler:hover, .spoiler:hover * {
+    color: var(--dtext-spoiler-hover-color);
+  }
 }
 
 // avoid empty gaps beneath dtext blocks in table rows.
